# lhcoptics

./: .gitignore  CHANGES.md  ISSUES.md  Makefile  README.md  architecture.md  architecure.md  class_diagram.mermaid  code_style.md  print_module_names.py  pyproject.toml  release.sh  sort_methods.py  sort_module_names.py  testing.md
doc/source/: conf.py  index.rst
doc/source/api/: lhcoptics.rst  lhcrepo.rst  modules.rst
examples/: Tutorial.ipynb  flat_model.madx  inj.json  job_15cm.py  job_create_lhcoptics.py  job_create_models.py  job_get_klimits.py  job_ir7.py  job_load_hllhc_optics.py  job_load_run3_optics.py  job_madx_script_checks.py  job_mk_xsuite_json.py  job_params.py  job_rampamdsqueeze.py  job_rematch.py  job_rematch_eor.py  job_rematch_inj.py  job_test.madx  job_test.py  job_test_inj.py  job_test_madx.py  job_to_madx.py  opt_ramp_2000_1500.madx
examples/archive/: job_ir7.py  job_load.py  job_rematch_eor.py  job_rematch_inj.py  job_to_madx.py  opt_150_v0.madx
examples/archive/bootstrap/: job_repo.py
examples/bootstrap/: job_model.py  job_repo.py
examples/data/: ex_aperture.py  make.py  make_aperture.py  make_circuits.py  model.madx
examples/mk_xsuite_json/: .job.py.swp  job.py  job_model.madx
examples/ramp/: ramp_0.json  ramp_1.json  ramp_10.json  ramp_2.json  ramp_3.json  ramp_4.json  ramp_5.json  ramp_6.json  ramp_7.json  ramp_8.json  ramp_9.json
examples/repo/: job_add_cycles.py  job_load_repo.py
src/: __init__.py  arcs.py  circuits.py  ir5.py  ir6.py  ir8.py  irs.py  luminosity.py  model_xsuite.py  optics.py  rdmsignal.py  section.py
src/lhcoptics/: __init__.py  aperture.py  arcs.py  circuits.py  ir1.py  ir15.py  ir2.py  ir3.py  ir4.py  ir5.py  ir6.py  ir7.py  ir8.py  irs.py  irtable.py  knob.py  lsa_util.py  model_madx.py  model_xsuite.py  nxcals_util.py  optics.py  opttable.py  rdmsignal.py  repo.py  section.py  utils.py
tests/: conftest.py  test_arcs.py  test_circuits.py  test_irs.py  test_lhcoptics.py  test_section.py  test_updates.py  test_xsuite_model.py
vdmir8/: .gitignore  000_vdm.madx  000_vdm_model.madx  001_vdm_model.madx  300_vdm_model.madx  README  ir8desqueeze.ipynb  ir8desqueeze.py  make_aperture.py  make_circuits.py  make_vdm.py  vdmip8_xing_knob.py
(+6 files in other folders)
