[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lhcoptics"
version = "0.0.3"
description = "Library to build LHC Optics"
authors = [{ name = "Riccardo De Maria", email = "riccardodemaria@gmail.com" }]
license = { text = "MIT" }
urls = { homepage = "https://github.com/rdemaria/lhcoptics", repository = "https://github.com/rdemaria/lhcoptics" }
keywords = ["LHC", "beam dynamics"]
dependencies = [ "numpy", "matplotlib", "xsuite", "cpymad"]

[tool.black]
line-length = 79
