[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lhcoptics"
dynamic = ["version"]
description = "Library to build LHC Optics"
authors = [{ name = "Riccardo De Maria", email = "riccardodemaria@gmail.com" }]
license = { text = "MIT" }
urls = { homepage = "https://github.com/rdemaria/lhcoptics", repository = "https://github.com/rdemaria/lhcoptics" }
keywords = ["LHC", "beam dynamics"]
dependencies = [
    "numpy",
    "matplotlib",
    "xsuite",
    "cpymad",
    "ruamel.yaml",
    "scipy",
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "lhcoptics.__version__"}

[tool.black]
line-length = 79

[tool.ruff.lint]
select = ["RUF100"]


[tool.flake8]
use_class_attributes_order_strict_mode = true
